--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "setup-defold",
   "version": "3.0.3",
   "description": "",
-  "main": "index.js",
+  "exports": "./index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "ncc build index.js"
@@ -10,9 +11,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=14.16"
+  },
   "dependencies": {
     "@actions/core": "^1.7.0",
-    "got": "^12.0.4"
+    "got": "^11.8.3"
   },
   "devDependencies": {
     "@zeit/ncc": "^0.22.3"
